Updated content 2020 - fixed design + removed the background image + fixed the transition on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -5,26 +5,25 @@ body, html {
 body {
     font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 22px;
-    color: rgba(245, 248, 250, 0.6);
-    color: #A6AAB7;
-    line-height: 1.5;
-    background: #2B3153 url(../images/back.jpg) 0 0 no-repeat;
-    background-size: cover;
-    font-weight: 300;
+    color: rgba(255, 255, 255, 0.8);
+    line-height: 1.6;
+    font-weight: 300;   
+    /* background: #2B3153 url(../images/back.jpg) 0 0 no-repeat; */
+    /* background-size: cover; */
+    background: #2B3153;
 }
 
 p {
-    margin-bottom: 20px; /* half of the line height */
+    margin-bottom: 22px;
 }
 
 a {
-    border-bottom: 1px dashed #A6AAB7;
+    border-bottom: 1px dashed rgba(255, 255, 255, 0.8);
 }
 
-/*
-::-moz-selection { background: #000; }
-::selection { background: #000; }
-*/
+
+/* ::-moz-selection { background: #000; } */
+/* ::selection { background: #000; } */
 
 strong {
     font-weight: 400;
@@ -38,16 +37,17 @@ strong {
 
 h1 {
     font-family: 'Poiret One', cursive;
-    font-size: 70px;
+    font-size: 60px;
     margin-bottom: 30px;
-    opacity: 0.6;
+    opacity: 0.8;
     text-transform: lowercase;
-    line-height: 0.9;
-    margin-left: -3px;
-    
+    line-height: 1;
+
     display: inline-block;
     background: url(../images/line-bottom.svg) center bottom no-repeat;
-    padding-bottom: 25px;
+    padding-bottom: 30px;
+
+     /* text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6); */
 }
 
 h2 {
@@ -58,6 +58,7 @@ h2 {
     display: none;
     height: 100%;
 }
+
 
 /* ==============================
 * Sidebar
@@ -90,10 +91,10 @@ h2 {
     letter-spacing: 1px;
     text-transform: uppercase;
     display: block;
-    width: 330px;
+    width: 260px;
     height: 30px;
-    top: 150px;
-    right: -150px;
+    top: 100px;
+    right: -110px;
     margin-top: 25px;
     margin-right: 10px;
     overflow: hidden;
@@ -130,7 +131,7 @@ h2 {
 }
 
 .sidebar .nav a.active {
-    border-bottom: 2px solid #fff;
+    border-bottom: 3px solid #fff;
     padding-bottom: 3px;
     color: #FFF;
 }
@@ -166,10 +167,11 @@ section {
     transform: translateX(100%);
     display: none;
     overflow: auto;
+    opacity: 1;
 }
 
 section.s1 {
-    padding-top: 120px;
+    /* padding-top: 120px; */
 
     display: block;
     -webkit-transform: translateX(0);
@@ -185,14 +187,13 @@ section.s4 {
     /* -- */
 }
 
-section .dev-icon {
-    width: 80px;
-    margin-bottom: 20px;
-}
-
-section .heading {
+/* section .heading {
     display: inline-block;
     font-size: 70px;
+} */
+
+.content ul li {
+    margin-left: 20px;
 }
 
 /* ==============================
@@ -200,13 +201,14 @@ section .heading {
 =============================== */
 
 .social_links {
-    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .social_links li {
     float: left;
     list-style-type: none;
     margin-right: 10px;
+    margin-left: 0 !important;
 }
 
 .social_links li a {
@@ -282,17 +284,33 @@ canvas { display: block; vertical-align: bottom; }
  * Input Fields Styling
  * ================================================ */
 
+ ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: inherit;
+}
+
+::-moz-placeholder { /* Firefox 19+ */
+    color: inherit;
+}
+
+:-ms-input-placeholder { /* IE 10+ */
+    color: inherit;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+    color: inherit;
+}
+
 .input-wrapper {
     position: relative;
-    width: 80%;
-    margin-bottom: 25px;
+    width: 60%;
+    margin-bottom: 30px;
 }
 
 .input {
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid rgba(166, 170, 183, 0.5);
-    color: #A6AAB7;
+    border-bottom: 2px solid rgba(166, 170, 183, 0.5);
+    color: inherit;
     box-sizing: border-box;
     font-family: inherit;
     font-size: inherit;
@@ -303,18 +321,14 @@ canvas { display: block; vertical-align: bottom; }
     width: 100%;
 }
 
-.input:focus {
-    outline: none;
-}
-
 input::-webkit-input-placeholder,
 input::-moz-placeholder {
-    color: #A6AAB7;
+    color: inherit;
 }
 
 input:focus::-webkit-input-placeholder,
 input:focus::-moz-placeholder {
-    color: #A6AAB7;
+    color: inherit;
 }
 
 .input:focus + .underline {
@@ -326,7 +340,7 @@ input:focus::-moz-placeholder {
     width: 0px;
     background-color: rgba(255, 255, 255, 0.8);
     display: inline-block;
-    height: 1px;
+    height: 3px;
     left: 50px;
     bottom: 0;
     left: 0;
@@ -355,8 +369,6 @@ button.btn:hover {
 }
 
 
-
-
 /* ================================================ */
 
 
@@ -365,7 +377,7 @@ button.btn:hover {
         position: fixed;
         width: 100%;
         height: 60px;
-        background: rgba(255,255,255,0.2);
+        background: rgba(255, 255, 255, 0.2);
     }
 
     .sidebar .portrait { display: none; }
@@ -389,16 +401,15 @@ button.btn:hover {
     }
 
     section {
-        position: relative;
-        padding: 40px 20px;
+        padding: 40px 30px;
     }
 
     section .wrapper { width: 100%; }
     
-    section.s1 { padding-top: 40px; }
+    /* section.s1 { padding-top: 40px; } */
 
     body { font-size: 18px; }
-    h1 { font-size: 60px; }
+    h1 { font-size: 40px; }
     section .heading { font-size: 60px; }
     .input-wrapper { width: 100%; }
 }
